@@ -1,3 +1,9 @@
+2020-10-12 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/pdk/gen.c,
+	  support/regression/tests/bug-3132.c:
+	  Fix bug #3132.c.
+
 2020-10-11 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/gen.c,
